# claude-plugin-total-recall

./: .IMPROVEMENT_PLAN.md.swp  .gitignore  DESIGN-async-migration.md  DESIGN-indexing-agent.md  DESIGN-parallel-search.md  DESIGN.md  EXPERT_REVIEW.md  IMPROVEMENT-PLAN.md  IMPROVEMENT_PLAN.md  PLAN-async-cleanup.md  PLAN-indexing-agent.md  README.md  REVIEW.md  pyproject.toml
hooks/: stop_hook.sh
scripts/: review.sh
skills/memgraph/: SKILL.md  backfill.md  bootstrap.sh  stats.md  topics.md
skills/memgraph/hooks/: index-continuous.sh  index-on-stop.sh
skills/memgraph/src/: backfill.py  cli.py  config.py  errors.py  indexer.py  memory_db.py  transcript.py
skills/total-recall/: SKILL.md  backfill.md  bootstrap.sh  stats.md  topics.md
skills/total-recall/hooks/: index-continuous.sh  setup.sh
skills/total-recall/src/: async_executor.py  backfill.py  batch_processor.py  batcher.py  cli.py  cli_async.py  config.py  context.py  daemon.py  daemon_agent.py  entities.py  errors.py  executor.py  indexer.py  memory_db.py  protocol.py  transcript.py  working_memory.py
skills/total-recall/tests/: conftest.py  test_agent_harness.py  test_agent_types.py  test_async_cache.py  test_async_connection.py  test_async_executor.py  test_async_retry.py  test_async_search.py  test_backfill.py  test_batch_processor.py  test_batcher.py  test_classification.py  test_cli_async.py  test_context.py  (+18 more)
tests/: conftest.py  test_backfill.py  test_cli.py  test_errors.py  test_indexer.py  test_integration.py  test_llm_features.py  test_retrieval.py  test_stop_hook.py  test_transcript.py
(+50 files in other folders)
