[project]
name = "total-recall"
version = "0.1.0"
description = "Conversation memory skill for Claude Code - indexes past conversations for semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.15.0",
    "sqlite-vec>=0.1.6",
    "aiosqlite>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "skills/total-recall/tests"]
pythonpath = ["skills/total-recall/src"]
asyncio_mode = "auto"
